--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Welcome To Our Studio!</div>
+          <div class="intro-lead-in">Welcome To Our Volunteer Helper!</div>
           <div class="intro-heading">It's Nice To Meet You</div>
-          <a href="#services" class="btn btn-xl">Tell Me More</a>
+          <a href="#services" class="btn btn-xl">About OUR site</a>
         </div>
       </div>
     </header>
