--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="dogs 2.png" alt="">
             </div>
             <div class="portfolio-caption">
               <h4>Threads</h4>
