--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <img class="img-fluid" src="dogs 2.png" alt="">
             </div>
             <div class="portfolio-caption">
-              <h4>Threads</h4>
+              <h4>Animal Care</h4>
               <p class="text-muted">Illustration</p>
             </div>
           </div>
