--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
             <a class="nav-link" href="#portfolio">Volunteer</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">Volunteer</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#team">Contact</a>
+            <a class="nav-link" href="#team">About Us</a>
           </li>
         </ul>
       </div>
