--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Portfolio</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading">Volunteer Opportunitie</h2>
+            <h3 class="section-subheading text-muted">Find your category of interest.</h3>
           </div>
         </div>
         <div class="row">
@@ -119,7 +119,7 @@
             </div>
             <div class="portfolio-caption">
               <h4>Animal Care</h4>
-              <p class="text-muted">Illustration</p>
+              <p class="text-muted">Shelters, vets</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -132,8 +132,8 @@
               <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
             </div>
             <div class="portfolio-caption">
-              <h4>Explore</h4>
-              <p class="text-muted">Graphic Design</p>
+              <h4>Elderly Services</h4>
+              <p class="text-muted">Nursing homes</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -146,8 +146,8 @@
               <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
             </div>
             <div class="portfolio-caption">
-              <h4>Finish</h4>
-              <p class="text-muted">Identity</p>
+              <h4>Hospital Services</h4>
+              <p class="text-muted"></p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -160,8 +160,8 @@
               <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
             </div>
             <div class="portfolio-caption">
-              <h4>Lines</h4>
-              <p class="text-muted">Branding</p>
+              <h4>Donate!</h4>
+              <p class="text-muted">Donate books, clothing</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -174,8 +174,8 @@
               <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
             </div>
             <div class="portfolio-caption">
-              <h4>Southwest</h4>
-              <p class="text-muted">Website Design</p>
+              <h4>Homeless Shelters</h4>
+              <p class="text-muted"></p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -188,8 +188,8 @@
               <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
             </div>
             <div class="portfolio-caption">
-              <h4>Window</h4>
-              <p class="text-muted">Photography</p>
+              <h4>Food Drives</h4>
+              <p class="text-muted"></p>
             </div>
           </div>
         </div>
