--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
 
-  </head>
+  </head> 
 
   <body id="page-top">
 
@@ -103,7 +103,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Volunteer Opportunitie</h2>
+            <h2 class="section-heading">Volunteer Opportunities</h2>
             <h3 class="section-subheading text-muted">Find your category of interest.</h3>
           </div>
         </div>
