--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
 
-  </head> 
+  </head>
 
   <body id="page-top">
 
@@ -107,6 +107,7 @@
             <h3 class="section-subheading text-muted">Find your category of interest.</h3>
           </div>
         </div>
+
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
             <div class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
@@ -159,6 +160,8 @@
               </div>
               <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
             </div>
+
+
             <div class="portfolio-caption">
               <h4>Donate!</h4>
               <p class="text-muted">Donate books, clothing</p>
@@ -192,9 +195,52 @@
               <p class="text-muted"></p>
             </div>
           </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <div class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="dogs 2.png" alt="">
+            </div>
+            <div class="portfolio-caption">
+              <h4>Parks and Recreation</h4>
+              <p class="text-muted">Museums, zoos, parks, aquariums</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <div class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            </div>
+            <div class="portfolio-caption">
+              <h4>Day Cares</h4>
+              <p class="text-muted"></p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <div class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            </div>
+            <div class="portfolio-caption">
+              <h4>Blood Drives</h4>
+              <p class="text-muted"></p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
 
     <!-- Team -->
     <section class="bg-light" id="team">
