--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="dogs 2.png" alt="">
+              <img class="img-fluid" src="dogs2.png" alt="">
             </div>
             <div class="portfolio-caption">
               <h4>Animal Care</h4>
@@ -345,14 +345,53 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2>Animal Care</h2>
-                  <p class="item-intro text-muted">Taking care of animals</p>
-                  <img class="img-fluid d-block mx-auto" src="dogs 2.png" alt="">
-                  <p>Use this area to describe your project.</p>
+                  <p class="item-intro text-muted">Shelters, vets</p>
+                  <img class="img-fluid d-block mx-auto" src="dogs2.png" alt="">
+                  <br>
+
+                  <p>Animal Care Centers of NYC</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Threads</li>
-                    <li>Category: Illustration</li>
+                    <li>Working with animals to help reduce stress and improve health</li>
+                    <li>Volunteer Requirements: Minimum 6 month commitment, 6 hours per month</li>
+                    <li>Age requirement: 18 years</li>
+                    <li><a href="http://www.nycacc.org/Volunteer.htm">Link to website</a></li>
                   </ul>
+                  <br>
+                  <hr>
+                  <br>
+
+                  <p>ASPCA</p>
+                  <ul class="list-inline">
+                    <li></li>
+                    <li>Age Requirement: Varies for different tasks</li>
+                    <li>CAT Volunteer: Provide socialization with shelter cats. Age Requirement: 16 years</li>
+                    <li>Adoption counselor: Age Requirement: 21 years
+                    <li><a href="https://www.aspca.org/take-action/volunteer/volunteer-aspca-adoption-center">Link to website</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+
+                  <p>Pupstarz Rescue NYC</p>
+                  <ul class="list-inline">
+                    <li>Volunteering at adoption events, speaking to potential adopters, collecting applications</li>
+                    <li>Handling and transporting animals</li>
+                    <li><a href="https://www.pupstarzrescue.org/piercing">Link to website</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+
+                  <p>Tristate Bird</p>
+                  <ul class="list-inline">
+                    <li>Caring for injured and orphaned animals</li>
+                    <li>General Age Requirement: 14 years</li>
+                    <li>Bird Care: Age Requirement: 16 years</li>
+                    <li>Oil spill response: Age Requirement: 18 years</li>
+                    <li><a href="https://tristatebird.org/volunteer-opportunites/">Link to website</a></li>
+                  </ul>
+                  <br>
+                  <br><br><br>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
@@ -656,3 +695,4 @@
   </body>
 
 </html>
+
