--- a/index.html
+++ b/index.html
@@ -420,11 +420,40 @@
                   <h2>Elderly Services</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                  <p>Use this area to describe your project.</p>
+                  <p>Visiting Nurse Service of New York</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Explore</li>
-                    <li>Category: Graphic Design</li>
+                    <li>Providing championship in the home or nursing home.</li>
+                    <li>Calling newly admitted patients and making bereavement calls.</li>
+                    <li>Giving Manicures and Massges.</li>
+                    <li>Located in the Bronx, Upper Manhattan, Lower Manhattan, Staten Island, and Brooklyn, queens and the haven.</li>
+                    <li><a href="https://www.vnsny.org/giving/volunteer/hospice-volunteer-opportunities/">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <p>Isabella </p>
+                  <ul class="list-inline">
+                    <li>Looking for creative volunteers to enrich the lives of their residents.</li>
+                    <li>Isabella presents the opportunity to manifest your knowledge and talents in their volunteer programs. </li>
+                    <li>Isabella asks that volunteers commit to at least 3 months or 150 hours of service.</li>
+                    <li><a href="http://www.isabella.org/Isabella/Help/">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <p>Visting Neighbors</p>
+                  <ul class="list-inline">
+                    <li>You don’t have to be over 18 to join.</li>
+                    <li> You don’t have to have a heavy commintment. </li>
+                    <li> It takes a few hours a week to change the life of a senior citizen!</li>
+                    <li><a href=" http://www.visitingneighbors.org/Activities-for-Seniors-New-York-City-NY.html">Check it out</a></li>
+                  </ul>
+                  <p>American SENIOR Communities </p>
+                  <ul class="list-inline">
+                    <li>As a volunteer you could bring magazines and newspapers to discuss.</li>
+                    <li> Be ready to listen to stories from the elders. </li>
+                    <li> Many locations</li>
+                    <li><a href="http://www.ascseniorcare.com/volunteer/">Check it out</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
