--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                   <!-- Project Details Go Here -->
                   <h2>Elderly Services</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
+                  <img class="img-fluid d-block mx-auto" src="old.jpg" alt="">
                   <p>Visiting Nurse Service of New York</p>
                   <ul class="list-inline">
                     <li>Providing championship in the home or nursing home.</li>
