--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
       </div>
     </div>
 
-    <!-- Modal 3 -->
+   <!-- Modal 3 -->
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -480,15 +480,55 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2>Hospital Services</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2>Medical Services</h2>
+                  <p class="item-intro text-muted">Hospitals, cancer centers</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+
+                  <p>New York Presbytarian</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Finish</li>
-                    <li>Category: Identity</li>
+                    <li>Working directly with patients, offering their time, talent, and dedication</li>
+                    <li>Commitment: Minimum of 150 hours</li>
+                    <li><a href="http://www.nyp.org/volunteer">Link to website</a></li>
                   </ul>
+                  <br>
+                  <hr>
+                  <br>
+
+                  <p>NYU Langone Health</p>
+                  <ul class="list-inline">
+                    <li>Providing essential social support to patients and families</li>
+                    <li>General Age Requirement: 18 years</li>
+                    <li>Junior Ambassador Program: Age Requirement: 16 years</li>
+                    <li>8 week application process</li>
+                    <li><a href="http://nyulangone.org/volunteer">Link to website</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+
+                  <p>Memorial Sloan Kettering Cancer Center</p>
+                  <ul class="list-inline">
+                    <li>Help people navigate through the hospital or assist in art expressions workshops</li>
+                    <li>If you are a cancer survivor or former caregiver for someone with cancer, you are eligible for the "patient-to-patient and caregiver volunteer support program.</li>
+                    <li><a href="https://www.mskcc.org/about/get-involved/volunteering">Link to website</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+
+                  <p>Jersey City Medical Center</p>
+                  <ul class="list-inline">
+                    <li>Many different volunteer tasks</li>
+                    <li>Act as an advocate and liaison for patients and their families</li>
+                    <li>Perform clerical duties</li>
+                    <li>Gift shop, book cart, clerical duties: Age Requirement: 14 years</li>
+                    <li>Patien Areas: 16 years</li>
+                    <li><a href="http://www.barnabashealth.org/Jersey-City-Medical-Center/Volunteer.aspx">Link to website</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
