--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                   <h2>Animal Care</h2>
                   <p class="item-intro text-muted">Shelters, vets</p>
                   <img class="img-fluid d-block mx-auto" src="dogs 2.png" alt="">
-                  <br>
+                  <br><br><br><br>
 
                   <p>Animal Care Centers of NYC</p>
                   <ul class="list-inline">
@@ -424,19 +424,19 @@
                   <ul class="list-inline">
                     <li>Providing championship in the home or nursing home.</li>
                     <li>Calling newly admitted patients and making bereavement calls.</li>
-                    <li>Giving Manicures and Massges.</li>
+                    <li>Giving manicures and massages</li>
                     <li>Located in the Bronx, Upper Manhattan, Lower Manhattan, Staten Island, and Brooklyn, queens and the haven.</li>
-                    <li><a href="https://www.vnsny.org/giving/volunteer/hospice-volunteer-opportunities/">Check it out</a></li>
+                    <li><a href="https://www.vnsny.org/giving/volunteer/hospice-volunteer-opportunities/">Link to website</a></li>
                   </ul>
                   <br>
                   <hr>
                   <br>
                   <p>Isabella </p>
                   <ul class="list-inline">
-                    <li>Looking for creative volunteers to enrich the lives of their residents.</li>
-                    <li>Isabella presents the opportunity to manifest your knowledge and talents in their volunteer programs. </li>
-                    <li>Isabella asks that volunteers commit to at least 3 months or 150 hours of service.</li>
-                    <li><a href="http://www.isabella.org/Isabella/Help/">Check it out</a></li>
+                    <li>Looking for creative volunteers to enrich the lives of their residents</li>
+                    <li>Presents the opportunity to manifest your knowledge and talents in their volunteer programs</li>
+                    <li>Commitment: Minimum of 3 months or 150 hours</li>
+                    <li><a href="http://www.isabella.org/Isabella/Help/">Link to website</a></li>
                   </ul>
                   <br>
                   <hr>
@@ -444,16 +444,18 @@
                   <p>Visting Neighbors</p>
                   <ul class="list-inline">
                     <li>You don’t have to be over 18 to join.</li>
-                    <li> You don’t have to have a heavy commintment. </li>
-                    <li> It takes a few hours a week to change the life of a senior citizen!</li>
-                    <li><a href=" http://www.visitingneighbors.org/Activities-for-Seniors-New-York-City-NY.html">Check it out</a></li>
+                    <li>No large commitment required</li>
+                    <li>It only takes a few hours a week to change the life of a senior citizen!</li>
+                    <li><a href="http://www.visitingneighbors.org/Activities-for-Seniors-New-York-City-NY.html">Link to website</a></li>
                   </ul>
+                  <br><hr><br>
+                  
                   <p>American SENIOR Communities </p>
                   <ul class="list-inline">
-                    <li>As a volunteer you could bring magazines and newspapers to discuss.</li>
-                    <li> Be ready to listen to stories from the elders. </li>
-                    <li> Many locations</li>
-                    <li><a href="http://www.ascseniorcare.com/volunteer/">Check it out</a></li>
+                    <li>Sharing magazines and newspapers for discussion</li>
+                    <li>Listening to stories from the elders</li>
+                    <li>Many locations</li>
+                    <li><a href="http://www.ascseniorcare.com/volunteer/">Link to website</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -483,7 +485,7 @@
                   <h2>Medical Services</h2>
                   <p class="item-intro text-muted">Hospitals, cancer centers</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-
+                  <br><br><br>
                   <p>New York Presbytarian</p>
                   <ul class="list-inline">
                     <li>Working directly with patients, offering their time, talent, and dedication</li>
@@ -574,7 +576,7 @@
       </div>
     </div>
 
-    <!-- Modal 5 -->
+   <!-- Modal 5 -->
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -591,12 +593,40 @@
                   <h2>Homeless Shelters</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <br><br><br>
+                  <p>New York Cares - BJ's Place Shelter</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Southwest</li>
-                    <li>Category: Website Design</li>
+                    <li>Welcoming guests, preparing light snacks, serving meals</li>
+                    <li>Time: Every night, 7:30pm to 6:30am</li>
+                    <li><a href="https://www.newyorkcares.org/projects/volunteer-homeless-shelter">Link to website</a></li>
                   </ul>
+                  <br><hr><br>
+
+                  <p>The Hoboken Shelter</p>
+                  <ul class="list-inline">
+                    <li>Preparing and serving dinner, sorting and distributing canned goods and clothes, cleaning, organizing</li>
+                    <li>Time: Every night, 6pm to 8pm</li>
+                    <li><a href="http://hobokenshelter.org/volunteers/">Link to website</a></li>
+                  </ul>
+                  <br><hr><br>
+
+                  <p>Saint John's Soup Kitchen</p>
+                  <ul class="list-inline">
+                    <li>Preparing and serving dinner, cleaning, organizing</li>
+                    <li>Serving on a daily basis</li>
+                    <li>Age Requirement: 14 years</li>
+                    <li><a href="http://www.njsoupkitchen.org/volunteer.htm">Link to website</a></li>
+                  </ul>
+                  <br><hr><br>
+
+                  <p>Homeless Solutions</p>
+                  <ul class="list-inline">
+                    <li>Game time with kids, preparing lunch and dinner, leading workshops</li>
+                    <li>Age Requirement: 16 years</li>
+                    <li><a href="https://www.homelesssolutions.org/how-you-can-help/volunteer/">Link to website</a></li>
+                  </ul>
+                  <br><br><br><br>
+
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
@@ -607,6 +637,7 @@
         </div>
       </div>
     </div>
+
 
     <!-- Modal 6 -->
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
@@ -625,6 +656,8 @@
                   <h2>Food Drives</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
+                  <br><br><br>
+                 
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
                     <li>Date: January 2017</li>
