--- a/index.html
+++ b/index.html
@@ -556,14 +556,42 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2>Donate!</h2>
+                  <h2>Donate</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p> Jersey City Medical Center</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Lines</li>
-                    <li>Category: Branding</li>
+                    <li>Magazine collection: Dontae used magazines in good condition for our book cart. Students will receive 10 volunteer service hours exchange for 100 magazines.</li>
+                    <li><a href=" http://www.barnabashealth.org/Jersey-City-Medical-Center/Volunteer.aspx">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <p>St. Mary’s Church Clothing Drive </p>
+                  <ul class="list-inline">
+                    <li>Schedule a pickup for slightly used clothing, shoes, linens, sheets, towels, purses, belts, ties and wallets.</li>
+                    <li>Located in Brooklyn</li>
+                    <li><a href=" http://www.stmarysclothingdrive.org/index.php?r=site%2Fpickup">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <p> The Bowery Mission </p>
+                  <ul class="list-inline">
+                    <li>Donate clean clothes to provide a great deal of relief to a homeless after being kept on the streets.</li>
+                    <li>Not able to except used woman clothing, but able to accept used mens clothing.</li>
+                    <li>Located in Manhattan </li>
+                    <li><a href="https://www.bowery.org/donate/donate-goods/donate-clothes/">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <p> Salvation Army </p>
+                  <ul class="list-inline">
+                    <li>Salvation Army it a thrift shop, you can donate ANYTHING.</li>
+                    <li>Salvation Army is there in disaster relief </li>
+                    <li>Your donations help!</li>
+                    <li><a href=" https://give.salvationarmyusa.org/site/SPageServer?pagename=national_donation_form">Check it out</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -576,6 +604,9 @@
       </div>
     </div>
 
+
+                  
+         
    <!-- Modal 5 -->
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
