--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="old.jpg" alt="">
             </div>
             <div class="portfolio-caption">
               <h4>Elderly Services</h4>
@@ -144,7 +144,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="kat.jpg" alt="">
             </div>
             <div class="portfolio-caption">
               <h4>Hospital Services</h4>
@@ -158,7 +158,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="ear.jpg" alt="">
             </div>
 
 
@@ -174,7 +174,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="soup.jpg" alt="">
             </div>
             <div class="portfolio-caption">
               <h4>Homeless Shelters</h4>
@@ -188,7 +188,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="remyma.jpg" alt="">
             </div>
             <div class="portfolio-caption">
               <h4>Food Drives</h4>
@@ -202,7 +202,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="dogs 2.png" alt="">
+              <img class="img-fluid" src="green-park.jpg" alt="">
             </div>
             <div class="portfolio-caption">
               <h4>Parks and Recreation</h4>
@@ -216,7 +216,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="kids.jpg" alt="">
             </div>
             <div class="portfolio-caption">
               <h4>Day Cares</h4>
@@ -230,7 +230,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="blood.jpg" alt="">
             </div>
             <div class="portfolio-caption">
               <h4>Blood Drives</h4>
