--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
 
 
     <!-- Modal 6 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -735,8 +735,7 @@
         </div>
       </div>
     </div>
-
-    <!-- Modal 7 -->
+    <!-- Modal 7-->
     <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -752,13 +751,115 @@
                   <!-- Project Details Go Here -->
                   <h2>Parks and Recreation</h2>
                   <p class="item-intro text-muted">Museums, zoos, parks, aquariums</p>
-                  <img class="img-fluid d-block mx-auto" src="dogs 2.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
+                  <p>NYC Parks</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Threads</li>
-                    <li>Category: Illustration</li>
+                    <li>Many volunteer opportunities</li>
+                    <li>Join a volunteer near your NYC park!</li>
+                    <li>Find opportunities!</li>
+                    <li><a href="https://www.nycgovparks.org/opportunities/volunteer">Check it out</a></li>
                   </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <p>The Witney  </p>
+                  <ul class="list-inline">
+                    <li>Contribute meaningfully to the museum and its visitors.</li>
+                    <li>You’ll gain excellent interpersonal skills. </li>
+                    <li>You must make a minimum six0-month commitment.</li>
+                    <li>In Manhattan</li>
+                    <li><a href="http://whitney.org/About/Volunteer">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <p>American Museum of Natural History</p>
+                  <ul class="list-inline">
+                    <li>50% of workers work in the public.</li>
+                    <li>Time commitment: 12-15 hours a week.</li>
+                    <li>Share your enthusiasm for natural history.</li>
+                    <li><a href="http://www.amnh.org/join-support/volunteer-now/">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <p> Long Island Aquarium </p>
+                  <ul class="list-inline">
+                    <li>Must be 18 years of age</li>
+                    <li>Many benefits</li>
+                    <li>Flexibility in volunteer assignments.</li>
+                    <li><a href="http://www.longislandaquarium.com/aquarium-info/get-involved/volunteer-opportunities/">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--modal8-->
+    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2>Day Cares </h2>
+                  <p class="item-intro text-muted">Museums, zoos, parks, aquariums</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
+                  <p> Stony Brook Child Care</p>
+                  <ul class="list-inline">
+                    <li>Work alongside professional teaching staff</li>
+                    <li>Work with infants and toodlers</li>
+                    <li>Flexible hours</li>
+                    <li><a href="https://www.stonybrook.edu/childcare/work-volunteer.shtml">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <p> Children’s Village  </p>
+                  <ul class="list-inline">
+                    <li>Tutors, mentors and role models to kids.</li>
+                    <li>Minimum age is 21. </li>
+                    <li>Meet mentees for a maximum of 10 hours per month for at least one year.</li>
+                    <li><a href=" https://childrensvillage.org/take-action/volunteer/individual-volunteers/">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <p>Kids Kastle Daycare & Preschool </p>
+                  <ul class="list-inline">
+                    <li>Designed to inspire young adolescents.</li>
+                    <li>Training experience acquired.</li>
+                    <li>Must be 12-17 years old.</li>
+                    <li><a href="http://kidskastle.com/youth-volunteer-program.php">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
+                  <p>The New York Center For Children</p>
+                  <ul class="list-inline">
+                    <li>Weekly one- on - one tutoring sessions.</li>
+                    <li>Homework and educational activities.</li>
+                    <li>Days and hours vary depending on the child involved. </li>
+                    <li><a href="http://www.newyorkcenterforchildren.org/volunteer/">Check it out</a></li>
+                  </ul>
+                  <br>
+                  <hr>
+                  <br>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
