--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                   <!-- Project Details Go Here -->
                   <h2>Food Drives</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="remyma" alt="">
+                  <img class="img-fluid d-block mx-auto" src="remyma.jpg" alt="">
                   <p>Food Bank for New York City</p>
                   <ul class="list-inline">
                     <li>Located in Manhattan</li>
