--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2>Food Drives</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted">DONATE FOODS!!</p>
                   <img class="img-fluid d-block mx-auto" src="remyma.jpg" alt="">
                   <p>Food Bank for New York City</p>
                   <ul class="list-inline">
