--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                   <!-- Project Details Go Here -->
                   <h2>Blood Drives</h2>
                   <p class="item-intro text-muted"></p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
+                  <img class="img-fluid d-block mx-auto" src="blood.jpg" alt="">
                   <p>New York Blood Center</p>
                   <ul class="list-inline">
                     <li>Upper East Side Donor Center</li>
