--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
+                    <i class="fa fa-twitter"></i>
+                  </a>
                   
                   </a>
                 </li>
