--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <div class="portfolio-caption">
               <h4>Animal Care</h4>
-              <p class="text-muted">Shelters, vets</p>
+              <p class="text-muted"></p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -134,7 +134,7 @@
             </div>
             <div class="portfolio-caption">
               <h4>Elderly Services</h4>
-              <p class="text-muted">Nursing homes</p>
+              <p class="text-muted"></p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -164,7 +164,7 @@
 
             <div class="portfolio-caption">
               <h4>Donate!</h4>
-              <p class="text-muted">Donate books, clothing</p>
+              <p class="text-muted"></p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -206,7 +206,7 @@
             </div>
             <div class="portfolio-caption">
               <h4>Parks and Recreation</h4>
-              <p class="text-muted">Museums, zoos, parks, aquariums</p>
+              <p class="text-muted"></p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
