--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="hillary.png" alt="">
               <h4>Hillary Severino</h4>
               <p class="text-muted">Lead Designer</p>
             </div>
