--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="IMG_6081.PNG" alt="">
               <h4>Precious Richards</h4>
               <p class="text-muted">Lead Designer</p>
             </div>
@@ -281,7 +281,7 @@
           
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="FullSizeRender.jpg" alt="">
               <h4>Janelle Cheung</h4>
               <p class="text-muted">Lead Developer</p>
             </div>
