--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
+          <p class="hidden">Welcome to Our Volunteer Helper!.</p>
           <div class="intro-lead-in">Welcome To Our Volunteer Helper!</div>
           <div class="intro-heading">It's Nice To Meet You</div>
           <a href="#services" class="btn btn-xl">About OUR site</a>
