--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a class="nav-link" href="#team">Our Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#signin">Sign In</a>
+            <a class="nav-link" href="#signin">Sign In/Sign Up</a>
           </li>
         </ul>
       </div>
