--- a/what.html
+++ b/what.html
@@ -15,7 +15,7 @@
     </form>
   </div>
   <div>
-    <form action="../unika-html/index.html" method="get">
+    <form action="index.html" method="get">
        <input type="submit"class="button button-block" value="Save" />
     </form>
     <!-- <button id="fix">Save</button> -->
