--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Our Solution</h4>
-            <p class="text-muted">This easy-to-use website allows organizations to add volunteer/donation opportunities by category. Volunteers who sign in may also log their service hours.</p>
+            <p class="text-muted">This easy-to-use website allows people to search for volunteer/donation opportunities by category. Volunteers who sign in may also log their service hours.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
