--- a/log.html
+++ b/log.html
@@ -23,7 +23,7 @@
         <div id="signup">
           <h1 id="w">Sign Up!</h1>
 
-          <form action="what.html" method="post">
+          <form action="what.html" method="get">
 
           <div class="top-row">
             <div class="field-wrap">
