--- a/index.html
+++ b/index.html
@@ -809,8 +809,8 @@
           <div class="col-sm-3">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="ew.jpg" alt="">
-              <h4>Precious Richards</h4>
-              <p class="text-muted"></p>
+              <h4>Precious R.</h4>
+              <p class="text-muted"> I am a big fan of Stephen Curry, and I love my iphone.</p>
             </div>
           </div>
           
@@ -818,7 +818,7 @@
           <div class="col-sm-3">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="hillary.png" alt="">
-              <h4>Hillary Severino</h4>
+              <h4>Hillary S.</h4>
               <p class="text-muted"></p>
             </div>
           </div>
@@ -827,7 +827,7 @@
           <div class="col-sm-3">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="alice.jpg" alt="">
-              <h4>Alice Mur</h4>
+              <h4>Alice M.</h4>
               <p class="text-muted"></p>
             </div>
           </div>
@@ -836,7 +836,7 @@
           <div class="col-sm-3">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="FullSizeRender.jpg" alt="">
-              <h4>Janelle Cheung</h4>
+              <h4>Janelle C.</h4>
               <p class="text-muted"></p>
             </div>
           </div>
