--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="hillary.png" alt="">
               <h4>Hillary S.</h4>
-              <p class="text-muted">I love cats, electric swing and stand uo comedy!!!!!</p>
+              <p class="text-muted">I love cats, electric swing and stand up comedy!!!!!</p>
             </div>
           </div>
           
@@ -837,7 +837,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="FullSizeRender.jpg" alt="">
               <h4>Janelle C.</h4>
-              <p class="text-muted"> I'm sixteen, and I love bubble tea... I think that kendrick lamar is awesome!!</p>
+              <p class="text-muted"> I'm sixteen, and I love bubble tea... I think that Kendrick Lamar is awesome!!</p>
             </div>
           </div>
         </div>
