--- a/test.html
+++ b/test.html
@@ -55,9 +55,11 @@
                 </a>
             </li>
             <li>
+                
                 <a href="#">
-                    <i class="fa fa-folder-open"></i> Track Your Hours
+                    <i class="fa fa-folder-open" onlick="location.href='what.html';"></i> Track Your Hours
                 </a>
+             
             </li>
         </ul><!-- /.nav -->
     </div>
