--- a/test.html
+++ b/test.html
@@ -57,7 +57,7 @@
             <li>
                 
                 <a href="what.html">
-                    <i class="fa fa-folder-open" onclick="document.location="what.html";"></i> Track Your Hours
+                    <i class="fa fa-folder-open"></i> Track Your Hours
                 </a>
              
             </li>
