--- a/index.html
+++ b/index.html
@@ -1460,7 +1460,7 @@
                   <hr>
                   <br>
                   <ul class="list-inline">
-                    <li>If you want more<a href="http://nybloodcenter.org/donate-blood/where-to-donate-today/">click here!</a></li>
+                    <li>If you want more, <a href="http://nybloodcenter.org/donate-blood/where-to-donate-today/">click here!</a></li>
                   </ul>
                   <br>
                   <hr>
