--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="final.jpg" alt="">
               <h4>Precious R.</h4>
-              <p class="text-muted"> I am a big fan of Stephen Curry, and I love my iphone.</p>
+              <p class="text-muted"> I am a big fan of Stephen Curry, and I love my iPhone.</p>
             </div>
           </div>
           
@@ -839,7 +839,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="FullSizeRender.jpg" alt="">
               <h4>Janelle C.</h4>
-              <p class="text-muted"> I'm sixteen, and I love bubble tea... I think that Kendrick Lamar is awesome!!</p>
+              <p class="text-muted"> I'm sixteen, and I love bubble tea and Kendrick Lamar.</p>
             </div>
           </div>
         </div>
