--- a/test.html
+++ b/test.html
@@ -108,7 +108,7 @@
                            <ul class="list-group">
                               <li class="list-group-item">Johnita Donut</li>
                               <li class="list-group-item">Software Engineer</li>
-                              <li class="list-group-item">Viacomn Inc. </li>
+                              <li class="list-group-item">Viacom Inc. </li>
                               <li class="list-group-item"><i class="fa fa-phone"></i> 000-000-0000 </li>
                               <li class="list-group-item"><i class="fa fa-envelope"></i> example@email.com</li>
                            </ul>
