--- a/log.html
+++ b/log.html
@@ -7,8 +7,8 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="in.css">
   <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
-//     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-//     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
   <title>Sign-in</title>
 </head>
 <body>
@@ -95,35 +95,35 @@
       </div><!-- tab-content -->
 
 </div> <!-- /form -->
-//   <div class="container-fluid">
-// 		<div class="sicon">
-//       <table class="icon-circle" align="center">
-// 			<div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 text-center">
-// 				<div class="icon-circle">
-// 					<a href="#" class="ifacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
-// 				</div>
-// 			</div>
+  <div class="container-fluid">
+		<div class="sicon">
+      <table class="icon-circle" align="center">
+			<div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 text-center">
+				<div class="icon-circle">
+					<a href="#" class="ifacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
+				</div>
+			</div>
 
-// 			<div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 text-center">
-// 				<div class="icon-circle">
-// 					<a href="#" class="itwittter" title="Twitter"><i class="fa fa-twitter"></i></a>
-// 				</div>
-// 			</div>
+			<div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 text-center">
+				<div class="icon-circle">
+					<a href="#" class="itwittter" title="Twitter"><i class="fa fa-twitter"></i></a>
+				</div>
+			</div>
 
-// 			<div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 text-center">
-// 				<div class="icon-circle">
-// 					<a href="#" class="igoogle" title="Google+"><i class="fa fa-google-plus"></i></a>
-// 				</div>
-// 			</div>
+			<div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 text-center">
+				<div class="icon-circle">
+					<a href="#" class="igoogle" title="Google+"><i class="fa fa-google-plus"></i></a>
+				</div>
+			</div>
 
-// 			<div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 text-center">
-// 				<div class="icon-circle">
-// 					<a href="#" class="iLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-// 				</div>
-// 			</div>
+			<div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 text-center">
+				<div class="icon-circle">
+					<a href="#" class="iLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+				</div>
+			</div>
 
-// 		</div>
+		</div>
 	
-// </div>
+</div>
  <script src="sign.js"></script>
 </body>
