--- a/log.html
+++ b/log.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!-- were the code  came from=https://codepen.io/ehermanson/pen/KwKWEv -->
+<html>
 <head>
   <script>
     src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -127,3 +128,4 @@
 </div>
  <script src="sign.js"></script>
 </body>
+</html>
