--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="final.jpg" alt="">
               <h4>Precious R.</h4>
-              <p class="text-muted"> I am a big fan of Stephen Curry, and I love my iPhone.</p>
+              <p class="text-muted">"Remember always be yourself, unless you suck. Then pretend to be someone else."  </p>
             </div>
           </div>
           
